langParser.py
# Generated from lang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'skip'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'||'", "'while'", 
                     "';'", "':='", "'true'", "'false'", "'not'", "'and'", 
                     "'or'", "'='", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SKIP_CMD", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "LSQUARE", "RSQUARE", "NDETCH", "WHILE", "SEMICOLON", 
                      "ASSIGN", "TRUE", "FALSE", "NOT", "AND", "OR", "EQ", 
                      "GT", "LT", "GE", "LE", "ID", "INT", "WS" ]

    RULE_prog = 0
    RULE_com = 1
    RULE_exp = 2
    RULE_aExp = 3
    RULE_bExp = 4
    RULE_bExp_tail = 5

    ruleNames =  [ "prog", "com", "exp", "aExp", "bExp", "bExp_tail" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    SKIP_CMD=4
    LBRACE=5
    RBRACE=6
    LPAREN=7
    RPAREN=8
    LSQUARE=9
    RSQUARE=10
    NDETCH=11
    WHILE=12
    SEMICOLON=13
    ASSIGN=14
    TRUE=15
    FALSE=16
    NOT=17
    AND=18
    OR=19
    EQ=20
    GT=21
    LT=22
    GE=23
    LE=24
    ID=25
    INT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(langParser.EOF, 0)

        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def getRuleIndex(self):
            return langParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = langParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.match(langParser.LBRACE)
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559056) != 0):
                self.state = 13
                self.com()
                self.state = 18
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 19
            self.match(langParser.RBRACE)
            self.state = 20
            self.match(langParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_com

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(langParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(langParser.ASSIGN, 0)
        def exp(self):
            return self.getTypedRuleContext(langParser.ExpContext,0)

        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class KleeneStarContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(langParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)
        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)
        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKleeneStar" ):
                listener.enterKleeneStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKleeneStar" ):
                listener.exitKleeneStar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKleeneStar" ):
                return visitor.visitKleeneStar(self)
            else:
                return visitor.visitChildren(self)


    class NondeterministicChoiceContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LSQUARE(self):
            return self.getToken(langParser.LSQUARE, 0)
        def NDETCH(self):
            return self.getToken(langParser.NDETCH, 0)
        def RSQUARE(self):
            return self.getToken(langParser.RSQUARE, 0)
        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)
        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNondeterministicChoice" ):
                listener.enterNondeterministicChoice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNondeterministicChoice" ):
                listener.exitNondeterministicChoice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNondeterministicChoice" ):
                return visitor.visitNondeterministicChoice(self)
            else:
                return visitor.visitChildren(self)


    class SkipContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SKIP_CMD(self):
            return self.getToken(langParser.SKIP_CMD, 0)
        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip" ):
                listener.enterSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip" ):
                listener.exitSkip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip" ):
                return visitor.visitSkip(self)
            else:
                return visitor.visitChildren(self)



    def com(self):

        localctx = langParser.ComContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_com)
        self._la = 0 # Token type
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = langParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.match(langParser.ID)
                self.state = 23
                self.match(langParser.ASSIGN)
                self.state = 24
                self.exp()
                self.state = 25
                self.match(langParser.SEMICOLON)
                pass
            elif token in [4]:
                localctx = langParser.SkipContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(langParser.SKIP_CMD)
                self.state = 28
                self.match(langParser.SEMICOLON)
                pass
            elif token in [9]:
                localctx = langParser.NondeterministicChoiceContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.match(langParser.LSQUARE)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559056) != 0):
                    self.state = 30
                    self.com()
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 36
                self.match(langParser.NDETCH)
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559056) != 0):
                    self.state = 37
                    self.com()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 43
                self.match(langParser.RSQUARE)
                self.state = 44
                self.match(langParser.SEMICOLON)
                pass
            elif token in [12]:
                localctx = langParser.KleeneStarContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.match(langParser.WHILE)
                self.state = 46
                self.match(langParser.LPAREN)
                self.state = 47
                self.bExp()
                self.state = 48
                self.match(langParser.RPAREN)
                self.state = 49
                self.match(langParser.LBRACE)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33559056) != 0):
                    self.state = 50
                    self.com()
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 56
                self.match(langParser.RBRACE)
                self.state = 57
                self.match(langParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)


        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)


        def getRuleIndex(self):
            return langParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = langParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exp)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.aExp(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.bExp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_aExp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntegerContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(langParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class AdditionContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddition" ):
                listener.enterAddition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddition" ):
                listener.exitAddition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddition" ):
                return visitor.visitAddition(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicationContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplication" ):
                listener.enterMultiplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplication" ):
                listener.exitMultiplication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplication" ):
                return visitor.visitMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class SubtractionContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtraction" ):
                listener.enterSubtraction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtraction" ):
                listener.exitSubtraction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtraction" ):
                return visitor.visitSubtraction(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticVariableContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(langParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticVariable" ):
                listener.enterArithmeticVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticVariable" ):
                listener.exitArithmeticVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticVariable" ):
                return visitor.visitArithmeticVariable(self)
            else:
                return visitor.visitChildren(self)


    class AParenthesisContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAParenthesis" ):
                listener.enterAParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAParenthesis" ):
                listener.exitAParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAParenthesis" ):
                return visitor.visitAParenthesis(self)
            else:
                return visitor.visitChildren(self)



    def aExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = langParser.AExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_aExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = langParser.AParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 66
                self.match(langParser.LPAREN)
                self.state = 67
                self.aExp(0)
                self.state = 68
                self.match(langParser.RPAREN)
                pass
            elif token in [26]:
                localctx = langParser.IntegerContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.match(langParser.INT)
                pass
            elif token in [25]:
                localctx = langParser.ArithmeticVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(langParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 83
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = langParser.AdditionContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 74
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 75
                        self.match(langParser.T__0)
                        self.state = 76
                        self.aExp(7)
                        pass

                    elif la_ == 2:
                        localctx = langParser.SubtractionContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 77
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 78
                        self.match(langParser.T__1)
                        self.state = 79
                        self.aExp(6)
                        pass

                    elif la_ == 3:
                        localctx = langParser.MultiplicationContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 80
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 81
                        self.match(langParser.T__2)
                        self.state = 82
                        self.aExp(5)
                        pass

             
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(langParser.NOT, 0)

        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)


        def bExp_tail(self):
            return self.getTypedRuleContext(langParser.BExp_tailContext,0)


        def ID(self):
            return self.getToken(langParser.ID, 0)

        def TRUE(self):
            return self.getToken(langParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(langParser.FALSE, 0)

        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)


        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)

        def getRuleIndex(self):
            return langParser.RULE_bExp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBExp" ):
                listener.enterBExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBExp" ):
                listener.exitBExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBExp" ):
                return visitor.visitBExp(self)
            else:
                return visitor.visitChildren(self)




    def bExp(self):

        localctx = langParser.BExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bExp)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(langParser.NOT)
                self.state = 89
                self.bExp()
                self.state = 90
                self.bExp_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(langParser.ID)
                self.state = 93
                self.bExp_tail()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(langParser.TRUE)
                self.state = 95
                self.bExp_tail()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(langParser.FALSE)
                self.state = 97
                self.bExp_tail()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.aExp(0)
                self.state = 99
                self.bExp_tail()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.match(langParser.LPAREN)
                self.state = 102
                self.bExp()
                self.state = 103
                self.match(langParser.RPAREN)
                self.state = 104
                self.bExp_tail()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BExp_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(langParser.EQ, 0)

        def exp(self):
            return self.getTypedRuleContext(langParser.ExpContext,0)


        def bExp_tail(self):
            return self.getTypedRuleContext(langParser.BExp_tailContext,0)


        def GT(self):
            return self.getToken(langParser.GT, 0)

        def LT(self):
            return self.getToken(langParser.LT, 0)

        def AND(self):
            return self.getToken(langParser.AND, 0)

        def getRuleIndex(self):
            return langParser.RULE_bExp_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBExp_tail" ):
                listener.enterBExp_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBExp_tail" ):
                listener.exitBExp_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBExp_tail" ):
                return visitor.visitBExp_tail(self)
            else:
                return visitor.visitChildren(self)




    def bExp_tail(self):

        localctx = langParser.BExp_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bExp_tail)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(langParser.EQ)
                self.state = 109
                self.exp()
                self.state = 110
                self.bExp_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(langParser.GT)
                self.state = 113
                self.exp()
                self.state = 114
                self.bExp_tail()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(langParser.LT)
                self.state = 117
                self.exp()
                self.state = 118
                self.bExp_tail()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(langParser.AND)
                self.state = 121
                self.exp()
                self.state = 122
                self.bExp_tail()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[3] = self.aExp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def aExp_sempred(self, localctx:AExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




